fix: some adjustments to styles according to the design

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -118,13 +118,18 @@
           </a>
         </div>
       </section>
-      <section class="favourites-coffee">
+      <section class="favourites-coffee" id="favourites-coffee">
+        <h2 class="heading-secondary">
+          Choose your <span>favorite</span> coffee
+        </h2>
         <div class="slider-block">
             <ul class="list">
                 <li class="item slide">
-                    <img class="slide-image" src="./assets/img/coffee-slider-1.png" alt="">
+                    <div class="slide-image">
+                      <img src="./assets/img/coffee-slider-1.png" alt="">
+                    </div>
                     <div class="slide-content">
-                        <h3 class="product-title">S’mores Frappuccino 1</h3>
+                        <h3 class="product-title">S’mores Frappuccino</h3>
                         <p class="product-description">
                             This new drink takes an espresso and mixes it with brown sugar
                             and cinnamon before being topped with oat milk.
@@ -133,25 +138,27 @@
                     </div>
                 </li>
                 <li class="item slide">
-                    <img class="slide-image" src="./assets/img/coffee-slider-1.png" alt="">
+                    <div class="slide-image">
+                      <img src="./assets/img/coffee-slider-2.png" alt="">
+                    </div>
                     <div class="slide-content">
-                        <h3 class="product-title">S’mores Frappuccino 2</h3>
+                        <h3 class="product-title">Caramel Macchiato</h3>
                         <p class="product-description">
-                            This new drink takes an espresso and mixes it with brown sugar
-                            and cinnamon before being topped with oat milk.
+                          Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.
                         </p>
-                        <p class="product-price">$5.50</p>
+                        <p class="product-price">$5.00</p>
                     </div>
                 </li>
                 <li class="item slide">
-                    <img class="slide-image" src="./assets/img/coffee-slider-1.png" alt="">
+                    <div class="slide-image">
+                        <img src="./assets/img/coffee-slider-3.png" alt="">
+                    </div>
                     <div class="slide-content">
-                        <h3 class="product-title">S’mores Frappuccino 3</h3>
+                        <h3 class="product-title">Ice coffee</h3>
                         <p class="product-description">
-                            This new drink takes an espresso and mixes it with brown sugar
-                            and cinnamon before being topped with oat milk.
+                          A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.
                         </p>
-                        <p class="product-price">$5.50</p>
+                        <p class="product-price">$4.50</p>
                     </div>
                 </li>
             </ul>
