--- a/coffee-house/menu.html
+++ b/coffee-house/menu.html
@@ -68,13 +68,13 @@
           <div class="tabs menu-tabs">
             <ul class="tabs-list">
               <li class="tab-item active">
-                <button type="button" data-category="coffee" onclick="handleTabClick(event)" ><span onclick="handleSpanClick(event)">☕</span>Coffee</button>
+                <button type="button" data-category="coffee" onclick="handleTabClick(event)" ><span><img src="./assets/img/coffee-tab.png"></span>Coffee</button>
               </li>
               <li class="tab-item">
-                <button type="button" data-category="tea" onclick="handleTabClick(event)" ><span onclick="handleSpanClick(event)">🫖</span>Tea</button>
+                <button type="button" data-category="tea" onclick="handleTabClick(event)" ><span><img src="./assets/img/tea-tab.png"></span>Tea</button>
               </li>
               <li class="tab-item">
-                <button type="button" data-category="dessert" onclick="handleTabClick(event)" ><span>🍰</span>Dessert</button>
+                <button type="button" data-category="dessert" onclick="handleTabClick(event)" ><span><img src="./assets/img/dessert-tab.png"></span>Dessert</button>
               </li>
             </ul>
           </div>
